Closed
Bug 1689623
Opened 4 years ago
Closed 4 years ago
Crash in [@ nsWindow::IsPopup]
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
RESOLVED
FIXED
87 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox85 | --- | unaffected |
firefox86 | --- | wontfix |
firefox87 | --- | fixed |
People
(Reporter: sefeng, Assigned: stransky)
References
(Blocks 2 open bugs, Regression)
Details
(Keywords: crash, regression, regressionwindow-wanted)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/cbf7dc4c-d67f-43b3-9ab6-823690210129
Reason: SIGSEGV /SEGV_MAPERR
Top 10 frames of crashing thread:
0 libxul.so nsWindow::IsPopup widget/gtk/nsWindow.cpp:1279
1 libxul.so mozilla::widget::GtkCompositorWidget::GetTransparentRegion widget/gtk/GtkCompositorWidget.cpp:131
2 libxul.so mozilla::wr::RenderCompositorSWGL::AllocateMappedBuffer gfx/webrender_bindings/RenderCompositorSWGL.cpp:126
3 libxul.so mozilla::wr::RenderCompositorSWGL::StartCompositing gfx/webrender_bindings/RenderCompositorSWGL.cpp:162
4 libxul.so <webrender_bindings::swgl_bindings::SwCompositor as webrender::composite::Compositor>::start_compositing gfx/webrender_bindings/src/swgl_bindings.rs:1658
5 libxul.so webrender::renderer::Renderer::draw_frame gfx/wr/webrender/src/renderer/mod.rs:4549
6 libxul.so webrender::renderer::Renderer::render_impl gfx/wr/webrender/src/renderer/mod.rs:2127
7 libxul.so webrender::renderer::Renderer::render gfx/wr/webrender/src/renderer/mod.rs:1873
8 libxul.so wr_renderer_render gfx/webrender_bindings/src/bindings.rs:639
9 libxul.so mozilla::wr::RendererOGL::UpdateAndRender gfx/webrender_bindings/RendererOGL.cpp:186
A few Linux users hit this crash. Looks legit to me because the code is new.
Flags: needinfo?(stransky)
Comment 1•4 years ago
|
||
Blocking sw-wr for now. Marking S2 for high volume on Nightly.
It would be great to find a regression range here.
Assignee | ||
Comment 2•4 years ago
|
||
Looks like mWidget is null.
Assignee: nobody → stransky
Flags: needinfo?(stransky)
Assignee | ||
Comment 3•4 years ago
|
||
Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Has Regression Range: --- → yes
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/88654fa3af79
[Linux] Check mWidget before use at GtkCompositorWidget::GetTransparentRegion(), r=lsalzman
Comment 5•4 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
Comment 6•4 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Flags: needinfo?(stransky)
Assignee | ||
Comment 7•4 years ago
|
||
Backport would need also Bug 1689245 and we don't use SW-WR in FF86 so I think we don't need to backport.
Flags: needinfo?(stransky)
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
Updated•4 years ago
|
status-firefox85:
--- → unaffected
status-firefox-esr78:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•