Bug 1689623 [Linux] Check mWidget before use at GtkCompositorWidget::GetTransparentRegion(), r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D103554